# PeelNet

./: Cargo.toml  Readme.md
.note/: Peel.drawio
.resource/cert/: client.crt  client.csr  client.key  client_android.p12  rootCA.crt  rootCA.key  rootCA.srl  server.crt  server.csr  server.key
.resource/server/: config.toml
crates/client_tui_controller/: Cargo.toml
crates/client_tui_controller/src/: controller.rs  main.rs  status.rs
crates/client_tui_controller/src/model/: mod.rs  saved.rs  state.rs
crates/client_tui_controller/src/pages/: index.rs  menu.rs  mod.rs
crates/client_tui_controller/src/tui/: component.rs  mod.rs  ui_tree.rs
crates/client_tui_controller/src/tui/component/: component_empty.rs  component_nav.rs  mod.rs
crates/controller/: Cargo.toml
crates/controller/locales/: zh-CN.yml
crates/controller/src/: lib.rs  net_server.rs
crates/controller_core/: Cargo.toml
crates/controller_core/locales/: zh-CN.yml
crates/controller_core/src/: lib.rs  net_server.rs
crates/controller_gui/: Cargo.toml  build.rs
crates/controller_gui/resource/component/: menu.slint
crates/controller_gui/resource/pages/: index.slint
crates/controller_gui/src/: main.rs
crates/controller_gui/src/component/: menu.rs
crates/controller_tui/: Cargo.toml
crates/controller_tui/src/model/: saved.rs
crates/controller_tui/src/pages/: index.rs  menu.rs  mod.rs
crates/controller_web_ui/: Cargo.toml
crates/controller_web_ui/src/: lib.rs
crates/controller_web_ui/web/root/: cluster.html  control.html  index.html
crates/core_global/: Cargo.toml
crates/core_server/: Cargo.toml
crates/core_server/locales/: zh-CN.yml
crates/core_server/src/: main.rs
crates/global/: Cargo.toml
crates/global/src/: config.rs  io.rs  lib.rs
crates/global/src/message/: mod.rs  net_message.rs
crates/net_client/: Cargo.toml
crates/net_server/: Cargo.toml
crates/server/: Cargo.toml
crates/server/locales/: zh-CN.yml
crates/server/src/: io.rs  main.rs  model_config.rs
crates/web_ui/: Cargo.toml
crates/web_ui/src/: lib.rs
crates/web_ui/web/root/: connect.html  style.css  welcome.html
(+6 files in other folders)
