[workspace]
members = [
    "crates/server",
    "crates/controller",
    "crates/net_client",
    "crates/net_server",
    "crates/web_ui",
    "crates/client_tui_controller",
    "crates/global"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PRC.SongMoJing<Song_MoJing@outlook.com>"]
