[workspace]
members = [
    "crates/core_server",
    "crates/core_global",
    "crates/controller_core",
    "crates/controller_web_ui",
    "crates/controller_tui",
    "crates/net_client",
    "crates/net_server"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PRC.SongMoJing<Song_MoJing@outlook.com>"]
