[package]
name = "core_server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
core_global = { path = "../core_global" }
controller_core = { path = "../controller_core" }
controller_web_ui = { path = "../controller_web_ui" }

directories = "6.0.0"
rust-i18n = "4.0.0"
lazy_static = "1.5.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0.7+spec-1.1.0"