[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
unicode-width = "0.2.2"
directories = "6.0.0"
rust-i18n = "3"
lazy_static = "1.5.0"
colored = "3.1.1"
chrono = "0.4.43"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "1.0.7+spec-1.1.0"